# bomberman-server

./: CMakeLists.txt  communication.c  communication.h  constants.h  database.c  database.db  database.h  linZoz.c  linZoz.h  main.c  mapa.txt
Game/: game.c  game.h  gameCommunication.c  gameCommunication.h  gameConstants.h
Mapy/: 1.txt  2.txt  3.txt
logging/: log.c  log.h
